# STRIKEVISION-IA

./: .dvcignore  .gitignore  ARQUITECTURA-PREVIEW.md  PREPLANEACION.md  README.MD  environment.yml  pyproject.toml  requirements-airflow.txt  requirements-gpu-wsl.txt  requirements.txt
.dvc/: config
data/metadata/: rounds.json  splits_manifest.csv  splits_manifest.json  splits_summary_by_category.csv
data/splits/: .gitignore  aggressive_men.dvc  aggressive_women.dvc  low_kicks_men.dvc  low_kicks_women.dvc  normal_men.dvc  passive_men.dvc  passive_women.dvc  striking_light_grappling_men.dvc
docs/: INTERFACES-WEB.md
scripts/data/: build_splits_manifest.py  video_cutter.py  video_downloader.py
src/ufc_tracker/: __init__.py
src/ufc_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ufc_tracker/candidates/: __init__.py
src/ufc_tracker/classification/: __init__.py
src/ufc_tracker/detection/: __init__.py  weights.py
src/ufc_tracker/features/: __init__.py
src/ufc_tracker/jobs/: __init__.py
src/ufc_tracker/pose/: __init__.py
src/ufc_tracker/postprocessing/: __init__.py
src/ufc_tracker/rendering/: __init__.py
src/ufc_tracker/roles/: __init__.py
src/ufc_tracker/services/: __init__.py  video_lab.py
src/ufc_tracker/storage/: __init__.py
src/ufc_tracker/tracking/: __init__.py
src/ufc_tracker/ui/: __init__.py  gradio_app.py  streamlit_app.py
src/ufc_tracker/video/: __init__.py
tests/unit/: test_video_lab.py
